--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,35 @@ psypose/models/model_weights
 psypose/models/__pycache__
 
 **/.DS_Store
+
+#Don't track content of these folders
+meva/trained_models/
+meva/someOtherfoler/
+meva/results/
+meva/data/
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.pyc
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+images_intermediate
