--- a/setup.cfg
+++ b/setup.cfg
@@ -18,9 +18,9 @@ classifiers =
 
 [options]
 package_dir =
-    = psypose/psypose
+    = psypose
 packages = find:
 python_requires = >=3.6
 
 [options.packages.find]
-where = src
+where = psypose
