--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ opencv-python>=3.4.11.43
 torch
 torchvision
 tensorboard==2.0
-git+https://github.com/ZhengyiLuo/smplx.git
-git+https://github.com/mkocabas/yolov3-pytorch.git
-git+https://github.com/pytorch/vision.git
-git+https://github.com/mkocabas/multi-person-tracker.git
+smplx @ git+https://github.com/ZhengyiLuo/smplx.git
+yolov3 @ git+https://github.com/mkocabas/yolov3-pytorch.git
+torchvision @ git+https://github.com/pytorch/vision.git
+multi_person_tracker @ git+https://github.com/mkocabas/multi-person-tracker.git
