--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 .spyproject
 
 
-src/psypose/models/model_weights
 src/psypose/models/__pycache__
 
 **/.DS_Store
@@ -42,7 +41,8 @@ src/psypose/meva/data/
 *.p
 *.npz
 *.gif
-
+*.png
+*.h5
 *.xml
 *.idea
 
