--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-ROMP_psypose @ git+https://github.com/scraplab/ROMP.git
 py-feat @ git+https://github.com/cosanlab/py-feat.git
-multi_person_tracker @ https://github.com/mkocabas/multi-person-tracker.git
 yolov3 @ git+https://github.com/mkocabas/yolov3-pytorch.git
 gdown
 moviepy
-umap-learn
 pytube
 jpy-video
 plotly>=4.14.3
-nibabel
 networkx
 scikit-learn
 scenedetect
@@ -37,3 +33,4 @@ shyaml
 pyquaternion
 PyYAML>=5.1.2
 numpy==1.20.0
+tensorboard
