--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ ROMP_psypose @ git+https://github.com/scraplab/ROMP.git
 py-feat @ git+https://github.com/cosanlab/py-feat.git
 multi_person_tracker @ https://github.com/mkocabas/multi-person-tracker.git
 yolov3 @ git+https://github.com/mkocabas/yolov3-pytorch.git
+pare @ git+
 gdown
 moviepy
 umap-learn
