--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ scikit-learn
 scenedetect
 future
 numba
-pytube
+#pytube
 h5py
 opencv-contrib-python
 prettytable
@@ -49,6 +49,6 @@ jpeg4py==0.1.4
 chumpy==0.70
 torchgeometry==0.1.2
 setuptools==47.3.1
-git+https://github.com/mkocabas/yolov3-pytorch.git
-git+https://github.com/mkocabas/multi-person-tracker.git
-git+https://github.com/giacaglia/pytube.git
+yolov3 @ git+https://github.com/mkocabas/yolov3-pytorch.git
+multi_person_tracker @ git+https://github.com/mkocabas/multi-person-tracker.git
+pytube @ git+https://github.com/giacaglia/pytube.git
