--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ scipy==1.7.0
 pyyaml==5.3.1
 yacs==0.1.8
 matplotlib==3.4.2
-scikit-image>=0.18.0
+scikit-image==0.17.2
 pillow==8.2.0
 pytorch-lightning==1.1.8
 numba==0.54.1
