--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,8 @@ tqdm
 scipy
 chumpy
 numba
-yacs
+pyquaternion
+yacsf
 joblib
 trimesh
 pyrender
@@ -27,6 +28,7 @@ h5py
 scikit-image
 opencv-python>=3.4.11.43
 torch
+torchgeometry
 torchvision
 tensorboard>=2.0
 smplx @ git+https://github.com/ZhengyiLuo/smplx.git
