specify all req versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,36 @@
 py-feat @ git+https://github.com/LandryBulls/py-feat.git
-gdown==4.3.0
-moviepy
-umap-learn
-pytube
-jpy-video
-plotly>=4.14.3
-nibabel
-networkx
-keras==2.6.0
-tensorflow==2.6.0
-scikit-learn
-scenedetect
-pyyaml
-future
-tqdm
-scipy
-chumpy
-numba
-pyquaternion
-yacs
-joblib
-trimesh
-pyrender
-pytube
-filterpy
-h5py
-scikit-image
-opencv-python>=3.4.11.43
-torch
-torchgeometry
-torchvision
-tensorboard>=2.0
+gdown==4.2.2
+moviepy==0.2.3.5
+umap-learn==0.5.2
+pytube==12.0.0
+jpy-video==0.4.0.dev1
+plotly==5.5.0
+nibabel==3.0.2
+networkx==2.6.3
+keras==2.8.0
+tensorflow==2.8.0
+scikit-learn==1.0.2
+scenedetect==0.5.6.1
+pyyaml==3.13
+future==0.16.0
+tqdm==4.63.0
+scipy==1.4.1
+chumpy==0.70
+numba==0.51.2
+pyquaternion==0.9.9
+yacs==0.1.8
+joblib==1.1.0
+trimesh==3.10.5
+pyrender==0.1.45
+pytube==12.0.0
+filterpy==1.4.5
+h5py==3.1.0
+scikit-image==0.18.3
+opencv-python==4.1.2.30
+torch==1.10.0+cu111
+torchgeometry==0.1.2
+torchvision==0.11.1+cu111
+tensorboard==2.8.0
 smplx @ git+https://github.com/ZhengyiLuo/smplx.git
 yolov3 @ git+https://github.com/mkocabas/yolov3-pytorch.git
 multi_person_tracker @ git+https://github.com/mkocabas/multi-person-tracker.git
