--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ filterpy==1.4.5
 h5py==3.1.0
 scikit-image==0.18.3
 opencv-python==4.1.2.30
-torch==1.10.0+cu111
+torch==1.10.0
 torchgeometry==0.1.2
 torchvision==0.11.1
 tensorboard==2.8.0
